fix: z-index

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -18,7 +18,6 @@
 .dark .slidev-slide-content {
   --un-bg-opacity: 0 !important;
   background-color: transparent !important;
-  z-index: 10;
 }
 
 .slidev-layout.cover,
